client/src/App.scss
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
    box-sizing: border-box;
}

html {
    font-size: 67%;
     overflow-x: hidden;
}
body {
    background-color: #192329; 
    color: white;
    overflow-x: hidden;
}

a {
    color: black; 
    font-size: 1.5rem;
}

.button-back {
    margin-bottom: 2rem;
}

.form-container .input {
    font-size: 1.4rem; 
}
.button-new {
    white-space: nowrap; 
    font-size: 1.2rem; 
    padding: 0.5rem 1rem; 
    width: auto; 
    grid-area: button-new;
    display: flex;
    justify-self: end;
   
    @media screen and (max-width: 768px) {
        font-size: 1rem;
        padding: 0.3rem 0.8rem;
        max-width: 100%; 
        margin-right: 1rem
    }
}



.button {
    display: block; 
    cursor: pointer;
    padding: 0.5rem 2rem;
    border: none;
    border-radius: 25px;
    background-color: #559c95;
    color: white;
    font-size: 1.5rem;
    margin-top: 1rem;
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
    align-self: center;
   
}
.button-table{
  display: block; 
  cursor: pointer;
  padding: 0.5rem 2rem;
  border: none;
  border-radius: 25px;
  background-color: #559c95;
  color: white;
  font-size: 1.5rem;
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
  align-self: center;

  @media (max-width: 768px) {
   font-size: 0.5rem;
   padding: 0.5rem 1rem;
   .table-icon{
    font-size: 20px;
   }
  }
 
}
.table-icon{
  font-size: 30px;
}
@media (max-width: 400px) {
 
  .table-icon{
   font-size: 20px;
  }
 }


.button:hover,.button-table:hover {
    background-color: #3a7f78;
}

.image-container {
    display: flex; 
    flex-direction: column;
    align-items: center;
}

.event-image {
    max-width: 100%; 
    height: auto; 
    border-radius: 1rem;
}

.app-contents {
    background-color: #192329;
    min-height: 100vh;
    height: max-content;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: calc(10px + 2vmin);
    color: white;
}

.container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 8rem 1.6fr;
    gap: 0px 0px;
    width: 100vw;
    grid-template-areas:
        "button-back . button-new"
        "contents contents contents";
}



.contents {
    grid-area: contents;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 90vh;
    h1 {
        margin-bottom: 4rem;
    }
}

/*--------------------------------------Event Cards----------------------------------*/
.list-container {
    display: flex;
    flex-direction: column;
    li {
        background-color: hsl(220, 13%, 28%);
        border-radius: 1rem;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: 1rem;
        min-height: 20rem;
        height: max-content;
        width: 25rem !important;
        margin: 0 auto 2rem;
    
        .event-title {
            text-align: left;
            font-size: 2rem;
            margin-left: 0.5rem;
            h3 {
                font-size: 0.5rem;
                text-transform: capitalize;
               
            }
        }
        .event-description,
        .event-info {
            font-size:1.5rem;
            margin-left: 0.5rem;
        }

        .button-container {
            display: flex;
            justify-content: space-between;
            button {
                &:first-of-type {
                    margin-right: 2rem;
                }
            }
        }
    }

    
    @media only screen and (min-width: 768px) {
        display: grid;
        grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
        gap: 2rem;
        width: 60rem;
        margin: 0 auto;

    }

    @media only screen and (min-width: 992px) {
        grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
        width: 120rem;
    }
}

 /*--------------------------------------Event Cards----------------------------------*/

.form-container {
    display: flex;
    flex-direction: column;
    font-size: 2rem;
    margin-left: 1rem;
    margin-right: 1rem;
    .label {
        margin-bottom: 0.5rem;
        align-self: flex-start;
    }

    .input {
        width: 40vw;
        margin-bottom: 2rem;
        text-align: center;
        align-self: end;
    }

}

.update-container {
    position:relative;
    top: 4rem;
    left: 0;
    height:fit-content;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgba(0, 0, 0, 0.4);

    .update-contents {
        display: grid;
        grid-template-areas:
            "close"
            "form";

        background-color: hsl(220, 13%, 28%);
        padding: 1rem 4rem 4rem;
        border-radius: 0.5rem;
        width: 50vw;
       
        .label{
            align-self: center;
        }

        .close {
            grid-area: close;
            color: white;
            font-weight: 700;
            display: flex;
            justify-content:center;
            margin-top: 4rem;
            cursor: pointer;
        }

        .contents {
            grid-area: form;
        }
    }
    @media (max-width: 767px) {
        .update-container {
          top: 2rem;
          left: 0;
          width: 100vw; 
          padding: 1rem;
          overflow-x: hidden; 
        }
        .input{
            width: 70vw;
        }
      
        .update-contents {
          padding: 1rem 1rem 1rem;
          width: 80vw; 
        }
      
        .close {
          margin-top: 2rem;
        }
      }
    

}
.list-container li:hover {
    transform:scale(1.05);
    transition: transform 0.3s ease;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    border-radius: 0.5rem; 
}


.admin-title {
    text-align: center;
}

.events-title {
    text-align: center;
    margin-bottom: 0.8rem;

}

.form-group {
    display: flex; 
    align-items: center; 
    text-align: center; 
    padding: 1px;
}


.label {
    flex:1; 
    font-weight: bold;
    margin-right: 1rem; 
    text-align: left;  
}

.text-container{
    background-color:#192329;
    padding: 5px;
    border-radius: 1rem;
    margin-top: 3px;
}


.input {
    flex: 2; 
    margin-bottom: 1rem;
    padding: 0.5rem; 
    border: 1px solid #ccc;
    border-radius: 25px;
    font-size: 1.8rem;
    text-align: center; 
    width: 100vw;
}
/* -------------------------------------navbar---------------------------------*/
.navigation {
    position: fixed;
    display: flex;
    z-index: 99999;
    align-items: center;
    height: 60px;
    width: 100%;
    padding: 0.5rem 0rem;
    background-color: #000000;
    color: white;
    box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
  }

  .logo{
    margin-left: 5px;
    width: 40px;
    height: 40px;
  }
  
  .brand-name {
    text-decoration: none;
    color: white;
    font-size: 2.5rem;
    margin-left: 1rem;
  }
  
  .navigation-menu {
    margin-left: auto;
  }
  
  .navigation-menu ul {
    display: flex;
    padding: 0;
  }
  
  .navigation-menu li {
    list-style-type: none;
    margin: 0 2rem;
  }
  
  .navigation-menu li a {
    text-decoration: none;
    display: block;
    width: 100%;
    color: white;
  }
  
  .hamburger {
    border: 0;
    height: 40px;
    width: 40px;
    padding: 0.5rem;
    border-radius: 50%;
    background-color: #283b8b;
    cursor: pointer;
    transition: background-color 0.2s ease-in-out;
    position: absolute;
    top: 50%;
    right: 25px;
    transform: translateY(-50%);
    display: none;
  }
  
  .hamburger:hover {
    background-color: #2642af;
  }
  
  @media screen and (max-width: 550px) {
    .hamburger {
      display: block;
    }
  
    .navigation-menu ul {
      flex-direction: column;
      position: absolute;
      top: 60px;
      left: 0;
      width: 100%;
      height: calc(100vh - 60px);
      background-color: white;
      border-top: 1px solid black;
      display: none;
    }
  
    .navigation-menu li {
      text-align: center;
      margin: 0;
    }
  
    .navigation-menu li a {
      color: white;
      width: 100%;
      padding: 1.5rem 0;
    }
  
    .navigation-menu li:hover {
      background-color: #eee;
    }
  
    .navigation-menu.expanded ul {
      display: block;
    }
    
  }

/* -------------------------------------navbar---------------------------------*/


/* -------------------------------------table---------------------------------*/

table {
    border-collapse: collapse;
    width: 70vw;

  
  /* Style for table header cells */
  th {
    background-color: #559c95;
    color: white;
    padding: 10px;
    text-align: center;
  }
  
  /* Style for alternating rows */
  tr:nth-child(even) {
    background-color: #645b5b;
  }
  
  /* Style for table data cells */
  td {
    padding: 10px;
    border-bottom: 1px solid #ddd;
    font-size: 0.8 rem;
    text-align: center;
  }
  @media (max-width: 768px) {
    /* Adjust table font size and padding for smaller screens */
   width: 90vw;
    td,
    th {
      padding: 5px;
      font-size: 16px;
    }
  }

}
  
  /* -------------------------------------table---------------------------------*/

